# docs/swagger.json
@@ -680,6 +680,29 @@
             }
         },
         "/v1/inri/invoices/{invoiceId}/attachments": {
+            "get": {
+                "description": "Returns a list of attachments by invoice ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Invoices"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Attachment"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Upload multiple files as attachments for the given invoice",
                 "consumes": [
@@ -1479,7 +1502,13 @@
                 "issuedAt": {
                     "type": "string"
                 },
-                "payedAt": {
+                "name": {
+                    "type": "string"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "paidAt": {
                     "type": "string"
                 },
                 "total": {
@@ -1517,7 +1546,13 @@
                 "issuedAt": {
                     "type": "string"
                 },
-                "payedAt": {
+                "name": {
+                    "type": "string"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "paidAt": {
                     "type": "string"
                 },
                 "total": {
